responsiveness issue fixed on mobile

--- a/src/assets/scss/_responsive.scss
+++ b/src/assets/scss/_responsive.scss
@@ -421,19 +421,12 @@ $text-size-medium: 0.8rem;
                 }
             }
 
-            .sort-box {
-                border: $secondary-color 1px solid;
-                border-radius: 10px;
-                background: transparent;
-
-                grid-column: 4/ span 5;
-                grid-row: 2;
-                width: 100%;
-                // height: 20%;
-            }
+           
 
             .dropdown-box {
-                display: none;
+                display: block;
+                grid-column: 4/ -1;
+                grid-row: 2;
             }
 
             #dropdown-desktop {
